--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Digital Canteen Order</string>
+    <string name="app_name">SmartCanteen</string>
+    <string name="order_summary_format">%1$s\nTotal: ₹%2$.2f</string>
 </resources>
